<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/privacy">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="hide_seen"
            android:summary="@string/hide_seen_summary"
            android:title="@string/hide_seen" />

        <EditTextPreference
            android:dependency="hide_seen"
            android:key="hide_seen_thread_list"
            android:summary="@string/hide_seen_thread_list_summary"
            android:title="@string/hide_seen_thread_list" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="hide_typing"
            android:summary="@string/hide_typing_summary"
            android:title="@string/hide_typing" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="hide_active_status"
            android:summary="@string/hide_active_status_summary"
            android:title="@string/hide_active_status" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="screenshot_notify"
            android:summary="@string/screenshot_notify_summary"
            android:title="@string/screenshot_notify" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/story">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="hide_story_views"
            android:summary="@string/hide_story_views_summary"
            android:title="@string/hide_story_views" />

        <EditTextPreference
            android:dependency="hide_story_views"
            android:key="hide_story_views_list"
            android:summary="@string/hide_story_views_summary"
            android:title="@string/hide_story_views" />

    </PreferenceCategory>

    <Preference
        android:key="restart_instagram"
        android:summary="@string/restart_instagram_summary"
        android:title="@string/restart_instagram" />

</PreferenceScreen>
